Added support for classes and instances